fix: fix top bar color and alignment

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
   padding: 0px;
   font-style: normal;
   background-color: black;
-  color: white;
 }
 
 .container {
@@ -22,10 +21,13 @@
 }
 
 .container-topbar {
-  margin-top: 1em;
+  /* margin-top: 1em; */
   width: 80%;
+  padding-top: 1em;
+  padding-bottom: 1em;
   padding-left: 10%;
   padding-right: 10%;
+  background-color: white;
 }
 
 .container-title {
@@ -83,7 +85,11 @@ h2 {
 
 a {
   text-decoration: none;
-  color: white;
+  padding: 0.25em;
+  font-size: 1.125em;
+  font-weight: 700;
+  background-color: white;
+  color: black;
 }
 
 a:active {
@@ -98,6 +104,15 @@ a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.main-color {
+  background-color: black;
+  color: white;
+}
+
+.nav-color {
+  background-color: white;
 }
 /* 
 .flex {
